--- a/Farming/CMakeLists.txt
+++ b/Farming/CMakeLists.txt
@@ -16,6 +16,9 @@ set(HEADER_FILES
 	ThirdParty/codeOpenGL/RendererOpenGL.h
 	Events.h
 	FarmingKeys.h
+	Unit.h
+	Map.h
+	Physics.h
 )
 
 set(SOURCE_FILES
@@ -29,6 +32,9 @@ set(SOURCE_FILES
 	Renderer.cpp
 	ThirdParty/codeOpenGL/RendererOpenGL.cpp
 	Events.cpp
+	Unit.cpp
+	Map.cpp
+	Physics.cpp
 )
 
 add_library(Farming SHARED ${HEADER_FILES} ${SOURCE_FILES})
@@ -50,7 +56,10 @@ endif()
 target_include_directories(Farming PRIVATE ${CMAKE_SOURCE_DIR}/Farming)
 target_include_directories(Farming PRIVATE ${CMAKE_SOURCE_DIR}/glfw/include)
 target_include_directories(Farming PRIVATE ${CMAKE_SOURCE_DIR}/glad/include)
+target_include_directories(Farming PRIVATE ${CMAKE_SOURCE_DIR}/stbi)
 
 target_link_libraries(Farming glfw glad stbi)
 
 target_precompile_headers(Farming PRIVATE pch.h)
+
+file(COPY Assets DESTINATION ${PROJECT_BINARY_DIR}/Farming)
