--- a/Farming/Farming.vcxproj
+++ b/Farming/Farming.vcxproj
@@ -142,7 +142,9 @@
     <ClInclude Include="Image.h" />
     <ClInclude Include="ImageImplementation.h" />
     <ClInclude Include="include\Farming.h" />
+    <ClInclude Include="Map.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Physics.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="RendererImplementation.h" />
     <ClInclude Include="Shaders.h" />
@@ -160,10 +162,12 @@
     <ClCompile Include="FarmingApp.cpp" />
     <ClCompile Include="FarmingWindow.cpp" />
     <ClCompile Include="Image.cpp" />
+    <ClCompile Include="Map.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Physics.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Shaders.cpp" />
     <ClCompile Include="ThirdParty\codeGLFW\WindowGLFW.cpp" />
